syntax = "proto3";

package resources.jobs;

import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/resources/jobs;jobs";

message Labels {
  repeated Label list = 1 [(validate.rules).repeated.max_items = 10];
}

message Label {
  uint64 id = 1; // @gotags: sql:"primary_key" alias:"id"
  optional string job = 2 [(validate.rules).string.max_len = 20];
  string name = 3 [(validate.rules).string.max_len = 48];
  // @sanitize: method=StripTags
  string color = 4 [(validate.rules).string = {
    len: 7,
    pattern: "^#[A-Fa-f0-9]{6}$",
  }];
  int32 order = 5;
}

message LabelCount {
  Label label = 1;
  int64 count = 2;
}
